--- a/index.html
+++ b/index.html
@@ -4,8 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>simple pookie</title>
+    <link rel="stylesheet" href="styles/blog.css">
 </head>
 <body>
-    
+    <div>
+        <h3>simple pookie
+        </h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis explicabo, eligendi sequi ratione nesciunt excepturi facilis soluta dolore cumque repellat aspernatur porro blanditiis iusto a maiores maxime libero! Nostrum, necessitatibus.</p>
+    </div>
 </body>
 </html>
